Fixed invisible elements

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -27,11 +27,28 @@ p {
     float: none;
   }
 
+
+
 p.small {
     font-size: 16px;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color:grey;
+}
+
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+    color:grey;
+}
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: grey;
+}
+.navbar-default .navbar-toggle {
+    background-color: black;
 }
 
 a,
@@ -40,11 +57,6 @@ a:active,
 a:hover,
 a.active {
     outline: 0;
-    color: #{{ site.color.primary }};
-}
-
-a:hover {
-    color: grey
 }
 
 
@@ -349,7 +361,7 @@ section.success {
 .btn-outline.active {
     /*border: solid 2px #fff;*/
     border: solid 2px;
-    color: #{{ site.color.primary }};
+    color: grey;
     background: #fff;
 }
 
